--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "moment-jalaali": "^0.10.4",
     "vue-toastification": "^1.7.14"
   }
